--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: 'Gilmer';
-    src: url('fonts/Gilmer Regular.otf') format('opentype');
+    src: url('/teknofest_siberguvenlik/fonts/Gilmer Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Gilmer';
-    src: url('fonts/Gilmer Bold.otf') format('opentype');
+    src: url('/teknofest_siberguvenlik/fonts/Gilmer Bold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Gilmer Light';
-    src: url('fonts/Gilmer Light.otf') format('opentype');
+    src: url('/teknofest_siberguvenlik/fonts/Gilmer Light.otf') format('opentype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Conthrax';
-    src: url('fonts/conthrax-sb.otf') format('opentype');
+    src: url('/teknofest_siberguvenlik/fonts/conthrax-sb.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
